--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
   <script src="lib/aframe.min.js"></script>
 
+  <script src="js/hide-in-ar-mode.js"></script>
+
   <script src="js/game.js"></script>
   <script src="js/block.js"></script>
   <script src="js/actor.js"></script>
@@ -21,7 +23,7 @@
 </head>
 <body>
 
-<a-scene game background="color: #111144" shadow="type: basic"
+<a-scene game shadow="type: basic"
   cursor="rayOrigin: mouse; fuse: false" raycaster="objects: .clickable">
 
   <a-entity id="laser-right" laser-controls="hand: right" raycaster="objects: .clickable"></a-entity>
@@ -31,6 +33,8 @@
   <a-entity id="camera-rotation" rotation="0 0 0">
     <a-camera></a-camera>
   </a-entity>
+
+  <a-sky color="#111144" hide-in-ar-mode></a-sky>
 
   <a-entity id="holder" rotation="0 0 0"  scale="0.3 0.3 0.3" position="0 -1 -2">
 
